[project]
name = "pyspark-code-executor-streallit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "black>=25.1.0",
    "findspark>=2.0.1",
    "google-generativeai>=0.8.4",
    "jupyterlab>=4.4.0",
    "llama-index>=0.12.31",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pyarrow>=19.0.1",
    "pyspark>=3.5.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
    "streamlit-ace>=0.1.1",
    "streamlit-js>=1.0.8",
    "streamlit-js-eval>=0.1.7",
    "watchdog>=6.0.0",
    "yapf>=0.43.0",
]
